DTSCCI-340 case note null check